<resources>
    <string name="app_name">Overmind</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_about">About</string>
    
    <string name="title_activity_main">Overmind</string>
    <string name="reading_minds">Leyendo mentes ajenas</string>
    <string name="data_analice">Analisis de datos</string>
    <string name="levels">Niveles mentales</string>
    <string name="play">Jugar</string>
    <string name="bluetooth_disconnect">Bluetooth disconnect</string>
    
    <string name="device_not_assigned">Empty</string>
</resources>